Fix fabled and token alignmnt

--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@
 
 body {overflow: hidden;}
 html, body {overscroll-behavior: none;}
-svg {pointer-events: none;}
+img, p {user-select: none;}
+svg {pointer-events: none; user-select: none;}
 
 .background_image {background-position: center; background-repeat: no-repeat; background-size: contain;}
 
@@ -51,6 +52,7 @@ svg {pointer-events: none;}
     background-size: cover; 
     pointer-events: all;
     cursor: move;
+    font-weight: bold;
     
     object-fit: contain;
     display: flex; /* Use flexbox for centering */
@@ -144,8 +146,8 @@ svg {pointer-events: none;}
     /* Center horizontally with this one weird trick! */
     left: 50%;
     transform: translate(-50%, 0);
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    height: 90%;
     object-fit: contain;
 }
 #info_visibility_shade {position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; pointer-events: none; background-color: black; opacity: 0.5; border-radius: 100%; display: none; transition: width ease-in-out 0.5s, height ease-in-out 0.5s, left ease-in-out 0.5s;}
@@ -223,6 +225,7 @@ svg {pointer-events: none;}
     margin: 5px; 
     border-radius: 5px;
     position: relative;
+    text-align: center;
 }
 .info_tokens_drag {
 
